@@ -9,31 +9,31 @@ package org.elasticsearch.xpack.esql.expression.predicate.operator;
 
 import org.elasticsearch.compute.data.Block;
 import org.elasticsearch.xpack.esql.analysis.Verifier;
-import org.elasticsearch.xpack.esql.expression.function.AbstractFunctionTestCase;
+import org.elasticsearch.xpack.esql.core.common.Failure;
+import org.elasticsearch.xpack.esql.core.expression.Expression;
+import org.elasticsearch.xpack.esql.core.expression.Literal;
+import org.elasticsearch.xpack.esql.core.expression.predicate.BinaryOperator;
+import org.elasticsearch.xpack.esql.core.tree.Location;
+import org.elasticsearch.xpack.esql.core.tree.Source;
+import org.elasticsearch.xpack.esql.core.type.DataType;
+import org.elasticsearch.xpack.esql.expression.function.AbstractScalarFunctionTestCase;
 import org.elasticsearch.xpack.esql.expression.function.TestCaseSupplier;
-import org.elasticsearch.xpack.esql.type.EsqlDataTypes;
-import org.elasticsearch.xpack.ql.common.Failure;
-import org.elasticsearch.xpack.ql.expression.Expression;
-import org.elasticsearch.xpack.ql.expression.Literal;
-import org.elasticsearch.xpack.ql.expression.predicate.BinaryOperator;
-import org.elasticsearch.xpack.ql.tree.Location;
-import org.elasticsearch.xpack.ql.tree.Source;
-import org.elasticsearch.xpack.ql.type.DataType;
-import org.elasticsearch.xpack.ql.type.DataTypes;
 import org.hamcrest.Matcher;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 
 import static org.elasticsearch.compute.data.BlockUtils.toJavaObject;
+import static org.elasticsearch.xpack.esql.core.type.DataType.isNull;
+import static org.elasticsearch.xpack.esql.core.type.DataTypeConverter.commonType;
 import static org.elasticsearch.xpack.esql.type.EsqlDataTypes.isRepresentable;
-import static org.elasticsearch.xpack.ql.type.DataTypeConverter.commonType;
-import static org.elasticsearch.xpack.ql.type.DataTypes.isNull;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
 
-public abstract class AbstractBinaryOperatorTestCase extends AbstractFunctionTestCase {
+public abstract class AbstractBinaryOperatorTestCase extends AbstractScalarFunctionTestCase {
 
     protected abstract Matcher<Object> resultsMatcher(List<TestCaseSupplier.TypedData> typedData);
 
@@ -70,10 +70,7 @@ public abstract class AbstractBinaryOperatorTestCase extends AbstractFunctionTes
      * @return True if the type combination is supported by the respective function.
      */
     protected boolean supportsTypes(DataType lhsType, DataType rhsType) {
-        if (isNull(lhsType) || isNull(rhsType)) {
-            return false;
-        }
-        if ((lhsType == DataTypes.UNSIGNED_LONG || rhsType == DataTypes.UNSIGNED_LONG) && lhsType != rhsType) {
+        if ((lhsType == DataType.UNSIGNED_LONG || rhsType == DataType.UNSIGNED_LONG) && lhsType != rhsType) {
             // UL can only be operated on together with another UL, so skip non-UL&UL combinations
             return false;
         }
@@ -82,8 +79,8 @@ public abstract class AbstractBinaryOperatorTestCase extends AbstractFunctionTes
 
     public final void testApplyToAllTypes() {
         // TODO replace with test cases
-        for (DataType lhsType : EsqlDataTypes.types()) {
-            for (DataType rhsType : EsqlDataTypes.types()) {
+        for (DataType lhsType : DataType.types()) {
+            for (DataType rhsType : DataType.types()) {
                 if (supportsTypes(lhsType, rhsType) == false) {
                     continue;
                 }
@@ -94,14 +91,16 @@ public abstract class AbstractBinaryOperatorTestCase extends AbstractFunctionTes
                 Source src = new Source(Location.EMPTY, lhsType.typeName() + " " + rhsType.typeName());
                 if (isRepresentable(lhsType) && isRepresentable(rhsType)) {
                     op = build(src, field("lhs", lhsType), field("rhs", rhsType));
-                    try (Block block = evaluator(op).get(driverContext()).eval(row(List.of(lhs.value(), rhs.value())))) {
+                    try (Block block = evaluator(op).get(driverContext()).eval(row(Arrays.asList(lhs.value(), rhs.value())))) {
                         result = toJavaObject(block, 0);
                     }
                 } else {
                     op = build(src, lhs, rhs);
                     result = op.fold();
                 }
-                if (result == null) {
+                if (isNull(lhsType) || isNull(rhsType)) {
+                    assertThat(op.toString(), result, is(nullValue()));
+                } else if (result == null) {
                     assertCriticalWarnings(
                         "Line -1:-1: evaluation of [" + op + "] failed, treating result as null. Only first 20 failures recorded.",
                         "Line -1:-1: java.lang.ArithmeticException: " + commonType(lhsType, rhsType).typeName() + " overflow"
@@ -117,19 +116,19 @@ public abstract class AbstractBinaryOperatorTestCase extends AbstractFunctionTes
     }
 
     public final void testResolveType() {
-        for (DataType lhsType : EsqlDataTypes.types()) {
+        for (DataType lhsType : DataType.types()) {
             if (isRepresentable(lhsType) == false) {
                 continue;
             }
             Literal lhs = randomLiteral(lhsType);
-            for (DataType rhsType : EsqlDataTypes.types()) {
+            for (DataType rhsType : DataType.types()) {
                 if (isRepresentable(rhsType) == false) {
                     continue;
                 }
                 Literal rhs = randomLiteral(rhsType);
                 BinaryOperator<?, ?, ?, ?> op = build(new Source(Location.EMPTY, lhsType.typeName() + " " + rhsType.typeName()), lhs, rhs);
 
-                if (lhsType == DataTypes.UNSIGNED_LONG || rhsType == DataTypes.UNSIGNED_LONG) {
+                if (lhsType == DataType.UNSIGNED_LONG || rhsType == DataType.UNSIGNED_LONG) {
                     validateUnsignedLongType(op, lhsType, rhsType);
                     continue;
                 }
